--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formous",
-  "version": "0.8.3",
+  "version": "0.9.0-jhsu.1",
   "description": "Simple and elegant form-handling for React",
   "main": "lib/index.js",
   "scripts": {
